--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body class="body">
 	<div class="page">
-
+    <header class="header"><img class="logo" src="./images/logo.png" alt="логотип 'Mesto'"></header>
 	</div>
-	<script src="./script/script.js"></script>
+	<script src="./script/index.js"></script>
 </body>
 </html>
