feature: Добавить секцию Профиль

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 <body class="body">
 	<div class="page">
-    <header class="header"><img class="logo" src="./images/logo.png" alt="логотип 'Mesto'"></header>
+    <header class="header"><img class="logo" src="./images/logo.svg" alt="логотип 'Mesto'"></header>
+    <hr class="line">
+    <main class="content">
+      <section class="profile">
+        <img class="profile__img" src="./images/photo.jpg" alt="Аватарка">
+        <div class="profile__info">
+          <!-- <h1 class="profile__title">Александр Никольский</h1> -->
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <button class="profile__edit-btn link" type="button"></button>
+          <!-- <p class="profile__subtitle">Наставник "Яндекс.Практикум" &#128077;</p> -->
+          <p class="profile__subtitle">Исследователь океана</p>
+        </div>
+        <button class="profile__add-btn link" type="button"></button>
+      </section>
+    </main>
 	</div>
 	<script src="./script/index.js"></script>
 </body>
