Добавить секцию Карточки и подвал
* Адаптировать под 320px - 1280px+
* Оптимизировать изоброжения

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 </head>
 <body class="body">
 	<div class="page">
+
+    <!-- header -->
     <header class="header"><img class="logo" src="./images/logo.svg" alt="логотип 'Mesto'"></header>
+    <!-- line -->
     <hr class="line">
+    <!-- main -->
     <main class="content">
+      <!-- profile -->
       <section class="profile">
         <img class="profile__img" src="./images/photo.jpg" alt="Аватарка">
         <div class="profile__info">
@@ -23,8 +28,57 @@
         </div>
         <button class="profile__add-btn link" type="button"></button>
       </section>
+      <!-- cards -->
+      <section class="cards">
+        <figure class="card">
+          <img class="card__img" src="./images/photo/1.jpg" alt="Карачаевск">
+          <figcaption class="card__footer">
+            <p class="card__text">Карачаевск</p>
+            <span class="card__like"></span>
+          </figcaption>
+        </figure>
+        <figure class="card">
+          <img class="card__img" src="./images/photo/2.jpg" alt="Карачаевск">
+          <figcaption class="card__footer">
+            <p class="card__text">Гора Эльбрус</p>
+            <span class="card__like"></span>
+          </figcaption>
+        </figure>
+        <figure class="card">
+          <img class="card__img" src="./images/photo/3.jpg" alt="Карачаевск">
+          <figcaption class="card__footer">
+            <p class="card__text">Домбай</p>
+            <span class="card__like"></span>
+          </figcaption>
+        </figure>
+        <figure class="card">
+          <img class="card__img" src="./images/photo/4.jpg" alt="Карачаевск">
+          <figcaption class="card__footer">
+            <p class="card__text">Гора Эльбрус</p>
+            <span class="card__like"></span>
+          </figcaption>
+        </figure>
+        <figure class="card">
+          <img class="card__img" src="./images/photo/5.jpg" alt="Карачаевск">
+          <figcaption class="card__footer">
+            <p class="card__text">Домбай</p>
+            <span class="card__like"></span>
+          </figcaption>
+        </figure>
+        <figure class="card">
+          <img class="card__img" src="./images/photo/6.jpg" alt="Карачаевск">
+          <figcaption class="card__footer">
+            <p class="card__text">Карачаево-Черкесия</p>
+            <span class="card__like"></span>
+          </figcaption>
+        </figure>
+      </section>
     </main>
-	</div>
-	<script src="./script/index.js"></script>
+    <!-- footer -->
+    <footer class="footer">
+      <p class="footer__cop">© 2020 Mesto Russia</p>
+    </footer>
+  </div>
+<script src="./script/index.js"></script>
 </body>
 </html>
