Править структуру файлов popup по бэм
* Добавить блок input, button с дефолтными стилями для инпутов и кнопок форм
* Добавить модификатор body_scroll для отключения скрола при открытом попап

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </footer>
 
     <!-- popup -->
-    <div class="popup">
+    <div class="popup popup_type_profile">
       <form class="popup__container" action="#">
         <span class="popup__close link"></span>
         <h2 class="popup__title">Редактировать профиль</h2>
