--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <span class="popup__close link"></span>
         <h2 class="popup__title">Редактировать профиль</h2>
         <input class="popup__user-name input" type="text" name="username" placeholder="Имя" required>
-        <input class="popup__user-status input" type="text" name="userstatus" placeholder="Статус">
+        <input class="popup__about-me input" type="text" name="aboutme" placeholder="О себе">
         <button class="popup__submit button" type="submit">Сохранить</button>
       </form>
     </div>
