Добавить фичу форма ред.профиля содержит значения со страницы
* Ренейминг элементов index.html index.css index.js
* Добавить ссылку на проект в README

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <header class="header">
         <img class="logo" src="./images/logo.svg" alt="логотип 'Mesto'">
       </header>
+
       <!-- line -->
       <hr class="line">
       <!-- main -->
@@ -23,9 +24,9 @@
         <section class="profile">
           <img class="profile__img" src="./images/aleksandr.jpg" alt="Аватарка">
           <div class="profile__info">
-            <h1 class="profile__title">Александр Никольский</h1>
+            <h1 class="profile__user-name">Александр Никольский</h1>
             <button class="profile__edit-btn link" type="button"></button>
-            <p class="profile__subtitle">Наставник "Яндекс.Практикум" &#128077;</p>
+            <p class="profile__user-about">Наставник "Яндекс.Практикум" &#128077;</p>
           </div>
           <button class="profile__add-btn link" type="button"></button>
         </section>
@@ -75,6 +76,7 @@
           </figure>
         </section>
       </main>
+
       <!-- footer -->
       <footer class="footer">
         <p class="footer__cop">© 2021 Mesto Russia</p>
