--- a/index.html
+++ b/index.html
@@ -35,42 +35,42 @@
           <figure class="card">
             <img class="card__img" src="./images/photo/1.jpg" alt="Фото.1">
             <figcaption class="card__footer">
-              <p class="card__text">С новым годом!</p>
+              <h3 class="card__text">С новым годом!</h3>
               <span class="card__like"></span>
             </figcaption>
           </figure>
           <figure class="card">
             <img class="card__img" src="./images/photo/2.jpg" alt="Фото.2">
             <figcaption class="card__footer">
-              <p class="card__text">Май френд</p>
+              <h3 class="card__text">Май френд</h3>
               <span class="card__like"></span>
             </figcaption>
           </figure>
           <figure class="card">
             <img class="card__img" src="./images/photo/3.jpg" alt="Фото.3">
             <figcaption class="card__footer">
-              <p class="card__text">#фрилансим</p>
+              <h3 class="card__text">#фрилансим</h3>
               <span class="card__like"></span>
             </figcaption>
           </figure>
           <figure class="card">
             <img class="card__img" src="./images/photo/4.jpg" alt="Фото.4">
             <figcaption class="card__footer">
-              <p class="card__text">Та самая</p>
+              <h3 class="card__text">Та самая</h3>
               <span class="card__like"></span>
             </figcaption>
           </figure>
           <figure class="card">
             <img class="card__img" src="./images/photo/5.jpg" alt="Фото.5">
             <figcaption class="card__footer">
-              <p class="card__text">На чиле</p>
+              <h3 class="card__text">На чиле</h3>
               <span class="card__like"></span>
             </figcaption>
           </figure>
           <figure class="card">
             <img class="card__img" src="./images/photo/6.jpg" alt="Фото.6">
             <figcaption class="card__footer">
-              <p class="card__text">#наудаленке</p>
+              <h3 class="card__text">#наудаленке</h3>
               <span class="card__like card__like_active"></span>
             </figcaption>
           </figure>
@@ -85,7 +85,7 @@
       <!-- popup -->
       <div class="popup popup_type_profile">
         <form class="popup__container" action="#">
-          <span class="popup__close link"></span>
+          <button class="popup__close link" type="button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <input class="popup__user-name input" type="text" name="username" placeholder="Имя" required>
           <input class="popup__about-me input" type="text" name="aboutme" placeholder="О себе">
