--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
       <header class="header">
         <img class="logo" src="./images/logo.svg" alt="логотип 'Mesto'">
       </header>
-
-      <!-- line -->
-      <hr class="line">
       <!-- main -->
       <main class="content">
         <!-- profile -->
@@ -36,47 +33,46 @@
             <img class="card__img" src="./images/photo/1.jpg" alt="Фото.1">
             <figcaption class="card__footer">
               <h3 class="card__text">С новым годом!</h3>
-              <span class="card__like"></span>
+              <button class="card__like" type="button"></button>
             </figcaption>
           </figure>
           <figure class="card">
             <img class="card__img" src="./images/photo/2.jpg" alt="Фото.2">
             <figcaption class="card__footer">
               <h3 class="card__text">Май френд</h3>
-              <span class="card__like"></span>
+              <button class="card__like" type="button"></button>
             </figcaption>
           </figure>
           <figure class="card">
             <img class="card__img" src="./images/photo/3.jpg" alt="Фото.3">
             <figcaption class="card__footer">
               <h3 class="card__text">#фрилансим</h3>
-              <span class="card__like"></span>
+              <button class="card__like" type="button"></button>
             </figcaption>
           </figure>
           <figure class="card">
             <img class="card__img" src="./images/photo/4.jpg" alt="Фото.4">
             <figcaption class="card__footer">
               <h3 class="card__text">Та самая</h3>
-              <span class="card__like"></span>
+              <button class="card__like" type="button"></button>
             </figcaption>
           </figure>
           <figure class="card">
             <img class="card__img" src="./images/photo/5.jpg" alt="Фото.5">
             <figcaption class="card__footer">
               <h3 class="card__text">На чиле</h3>
-              <span class="card__like"></span>
+              <button class="card__like" type="button"></button>
             </figcaption>
           </figure>
           <figure class="card">
             <img class="card__img" src="./images/photo/6.jpg" alt="Фото.6">
             <figcaption class="card__footer">
               <h3 class="card__text">#наудаленке</h3>
-              <span class="card__like card__like_active"></span>
+              <button class="card__like card__like_active" type="button"></button>
             </figcaption>
           </figure>
         </section>
       </main>
-
       <!-- footer -->
       <footer class="footer">
         <p class="footer__cop">© 2021 Mesto Russia</p>
