Добавить в разметку список в секцию карточки
* Поправить отспупы секций

--- a/index.html
+++ b/index.html
@@ -29,48 +29,62 @@
         </section>
         <!-- cards -->
         <section class="cards">
-          <figure class="card">
-            <img class="card__img" src="./images/photo/1.jpg" alt="Фото.1">
-            <figcaption class="card__footer">
-              <h3 class="card__text">С новым годом!</h3>
-              <button class="card__like" type="button"></button>
-            </figcaption>
-          </figure>
-          <figure class="card">
-            <img class="card__img" src="./images/photo/2.jpg" alt="Фото.2">
-            <figcaption class="card__footer">
-              <h3 class="card__text">Май френд</h3>
-              <button class="card__like" type="button"></button>
-            </figcaption>
-          </figure>
-          <figure class="card">
-            <img class="card__img" src="./images/photo/3.jpg" alt="Фото.3">
-            <figcaption class="card__footer">
-              <h3 class="card__text">#фрилансим</h3>
-              <button class="card__like" type="button"></button>
-            </figcaption>
-          </figure>
-          <figure class="card">
-            <img class="card__img" src="./images/photo/4.jpg" alt="Фото.4">
-            <figcaption class="card__footer">
-              <h3 class="card__text">Та самая</h3>
-              <button class="card__like" type="button"></button>
-            </figcaption>
-          </figure>
-          <figure class="card">
-            <img class="card__img" src="./images/photo/5.jpg" alt="Фото.5">
-            <figcaption class="card__footer">
-              <h3 class="card__text">На чиле</h3>
-              <button class="card__like" type="button"></button>
-            </figcaption>
-          </figure>
-          <figure class="card">
-            <img class="card__img" src="./images/photo/6.jpg" alt="Фото.6">
-            <figcaption class="card__footer">
-              <h3 class="card__text">#наудаленке</h3>
-              <button class="card__like card__like_active" type="button"></button>
-            </figcaption>
-          </figure>
+					<ul class="cards__items">
+						<li class="cards__item">
+							<figure class="card">
+								<img class="card__img" src="./images/photo/1.jpg" alt="Фото.1">
+								<figcaption class="card__footer">
+									<h3 class="card__text">С новым годом!</h3>
+									<button class="card__like" type="button"></button>
+								</figcaption>
+							</figure>
+						</li>
+						<li class="cards__item">
+							<figure class="card">
+								<img class="card__img" src="./images/photo/2.jpg" alt="Фото.2">
+								<figcaption class="card__footer">
+									<h3 class="card__text">Май френд</h3>
+									<button class="card__like" type="button"></button>
+								</figcaption>
+							</figure>
+						</li>
+						<li class="cards__item">
+							<figure class="card">
+								<img class="card__img" src="./images/photo/3.jpg" alt="Фото.3">
+								<figcaption class="card__footer">
+									<h3 class="card__text">#фрилансим</h3>
+									<button class="card__like" type="button"></button>
+								</figcaption>
+							</figure>
+						</li>
+						<li class="cards__item">
+							<figure class="card">
+								<img class="card__img" src="./images/photo/4.jpg" alt="Фото.4">
+								<figcaption class="card__footer">
+									<h3 class="card__text">Та самая</h3>
+									<button class="card__like" type="button"></button>
+								</figcaption>
+							</figure>
+						</li>
+						<li class="cards__item">
+							<figure class="card">
+								<img class="card__img" src="./images/photo/5.jpg" alt="Фото.5">
+								<figcaption class="card__footer">
+									<h3 class="card__text">На чиле</h3>
+									<button class="card__like" type="button"></button>
+								</figcaption>
+							</figure>
+						</li>
+						<li class="cards__item">
+							<figure class="card">
+								<img class="card__img" src="./images/photo/6.jpg" alt="Фото.6">
+								<figcaption class="card__footer">
+									<h3 class="card__text">#наудаленке</h3>
+									<button class="card__like card__like_active" type="button"></button>
+								</figcaption>
+							</figure>
+						</li>
+					</ul>
         </section>
       </main>
       <!-- footer -->
