--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 
       <!-- popup -->
       <div class="popup popup_type_profile">
-        <form class="popup__container" action="#">
+        <form class="popup__form" action="#">
           <button class="popup__close link" type="button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <input class="popup__user-name input" type="text" name="username" placeholder="Имя" required>
           <input class="popup__about-me input" type="text" name="aboutme" placeholder="О себе">
-          <button class="popup__submit button" type="submit">Сохранить</button>
+          <button class="popup__button popup__button_type_save" type="submit">Сохранить</button>
         </form>
       </div>
     </div>
