--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
         <section class="profile">
           <img class="profile__img" src="./images/aleksandr.jpg" alt="Аватарка">
           <div class="profile__info">
-            <h1 class="profile__user-name">Александр Никольский</h1>
+            <!-- <h1 class="profile__user-name">Александр</h1> -->
+            <h1 class="profile__user-name">Жак-Ив Кусто</h1>
             <button class="profile__edit-btn link" type="button"></button>
-            <p class="profile__user-about">Наставник "Яндекс.Практикум" &#128077;</p>
+            <!-- <p class="profile__user-about">Наставник "Яндекс.Практикум" &#128077;</p> -->
+            <p class="profile__user-about">Исследователь океана</p>
           </div>
           <button class="profile__add-btn link" type="button"></button>
         </section>
@@ -34,7 +36,7 @@
 							<figure class="card">
 								<img class="card__img" src="./images/photo/1.jpg" alt="Фото.1">
 								<figcaption class="card__footer">
-									<h3 class="card__text">С новым годом!</h3>
+									<h2 class="card__text">С новым годом!</h2>
 									<button class="card__like" type="button"></button>
 								</figcaption>
 							</figure>
@@ -43,7 +45,7 @@
 							<figure class="card">
 								<img class="card__img" src="./images/photo/2.jpg" alt="Фото.2">
 								<figcaption class="card__footer">
-									<h3 class="card__text">Май френд</h3>
+									<h2 class="card__text">Май френд</h2>
 									<button class="card__like" type="button"></button>
 								</figcaption>
 							</figure>
@@ -52,7 +54,7 @@
 							<figure class="card">
 								<img class="card__img" src="./images/photo/3.jpg" alt="Фото.3">
 								<figcaption class="card__footer">
-									<h3 class="card__text">#фрилансим</h3>
+									<h2 class="card__text">#фрилансим</h2>
 									<button class="card__like" type="button"></button>
 								</figcaption>
 							</figure>
@@ -61,7 +63,7 @@
 							<figure class="card">
 								<img class="card__img" src="./images/photo/4.jpg" alt="Фото.4">
 								<figcaption class="card__footer">
-									<h3 class="card__text">Та самая</h3>
+									<h2 class="card__text">Та самая</h2>
 									<button class="card__like" type="button"></button>
 								</figcaption>
 							</figure>
@@ -70,7 +72,7 @@
 							<figure class="card">
 								<img class="card__img" src="./images/photo/5.jpg" alt="Фото.5">
 								<figcaption class="card__footer">
-									<h3 class="card__text">На чиле</h3>
+									<h2 class="card__text">На чиле</h2>
 									<button class="card__like" type="button"></button>
 								</figcaption>
 							</figure>
@@ -79,7 +81,7 @@
 							<figure class="card">
 								<img class="card__img" src="./images/photo/6.jpg" alt="Фото.6">
 								<figcaption class="card__footer">
-									<h3 class="card__text">#наудаленке</h3>
+									<h2 class="card__text">#наудаленке</h2>
 									<button class="card__like card__like_active" type="button"></button>
 								</figcaption>
 							</figure>
