--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <main class="content">
         <!-- profile -->
         <section class="profile">
-          <img class="profile__img" src="./images/aleksandr.jpg" alt="Аватарка">
+          <img class="profile__img" src="./images/photo.jpg" alt="Аватарка">
           <div class="profile__info">
             <!-- <h1 class="profile__user-name">Александр</h1> -->
             <h1 class="profile__user-name">Жак-Ив Кусто</h1>
