--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </footer>
 
       <!-- popup -->
-      <div class="popup popup_type_profile">
+      <div class="popup">
         <div class="popup__container">
           <button class="popup__close hover" type="button" aria-label="закрыть всплывающее окно"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
