--- a/index.html
+++ b/index.html
@@ -30,48 +30,6 @@
         <!-- card -->
         <section class="card">
           <ul class="card__items">
-            <li class="card__item">
-              <img class="card__img" src="./images/photo/1.jpg" alt="Фото.1">
-              <div class="card__footer">
-                <h2 class="card__text">С новым годом!</h2>
-                <button class="card__like" type="button" aria-label="лайк"></button>
-              </div>
-            </li>
-            <li class="card__item">
-              <img class="card__img" src="./images/photo/2.jpg" alt="Фото.2">
-              <div class="card__footer">
-                <h2 class="card__text">Май френд</h2>
-                <button class="card__like" type="button" aria-label="лайк"></button>
-              </div>
-            </li>
-            <li class="card__item">
-              <img class="card__img" src="./images/photo/3.jpg" alt="Фото.3">
-              <div class="card__footer">
-                <h2 class="card__text">#фрилансим</h2>
-                <button class="card__like" type="button" aria-label="лайк"></button>
-              </div>
-            </li>
-            <li class="card__item">
-              <img class="card__img" src="./images/photo/4.jpg" alt="Фото.4">
-              <div class="card__footer">
-                <h2 class="card__text">Та самая</h2>
-                <button class="card__like" type="button" aria-label="лайк"></button>
-              </div>
-            </li>
-            <li class="card__item">
-              <img class="card__img" src="./images/photo/5.jpg" alt="Фото.5">
-              <div class="card__footer">
-                <h2 class="card__text">На чиле</h2>
-                <button class="card__like" type="button" aria-label="лайк"></button>
-              </div>
-            </li>
-            <li class="card__item">
-              <img class="card__img" src="./images/photo/6.jpg" alt="Фото.6">
-              <div class="card__footer">
-                <h2 class="card__text">#наудаленке</h2>
-                <button class="card__like" type="button" aria-label="лайк"></button>
-              </div>
-            </li>
           </ul>
         </section>
       </main>
@@ -80,20 +38,53 @@
         <p class="footer__cop">&copy; 2021 Mesto Russia</p>
       </footer>
 
-      <!-- popup -->
-      <div class="popup">
+      <!-- popup profile -->
+      <div class="popup popup_type_profile">
         <div class="popup__container">
           <button class="popup__close hover" type="button" aria-label="закрыть всплывающее окно"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
-          <form class="popup__form" method="get" name="profile">
+          <form class="popup__form popup__form_type_profile" method="get" name="profile">
             <input class="popup__input popup__input_type_user-name" type="text" name="username" placeholder="Имя" required>
             <input class="popup__input popup__input_type_about-me" type="text" name="aboutme" placeholder="О себе">
             <button class="popup__button" type="submit" aria-label="сохранить изминения">Сохранить</button>
           </form>
         </div>
       </div>
+      <!-- popup photo -->
+      <div class="popup popup_type_photo">
+        <div class="popup__container">
+          <button class="popup__close hover" type="button" aria-label="закрыть всплывающее окно"></button>
+          <h2 class="popup__title">Новое место</h2>
+          <form class="popup__form popup__form_type_photo" method="get" name="profile">
+            <input class="popup__input popup__input_type_card-name" type="text" name="cardname" placeholder="Название">
+            <input class="popup__input popup__input_type_card-link" type="url" name="cardlink" placeholder="Ссылка на картинку" required>
+            <button class="popup__button" type="submit" aria-label="сохранить изминения">Сохранить</button>
+          </form>
+        </div>
+      </div>
+      <!-- popup fullscreen -->
+      <div class="popup popup_type_fullscreen">
+        <div class="popup__container-fullscreen">
+          <button class="popup__close hover" type="button" aria-label="закрыть всплывающее окно"></button>
+          <img class="popup__full-img" src="#" alt="фото">
+          <h2 class="popup__full-text"></h2>
+        </div>
+      </div>
     </div>
 
+    <!-- template -->
+    <template class="card-template">
+      <li class="card__item">
+        <button class="card__trash hover" type="button" aria-label="удалить карточку"></button>
+        <img class="card__img" src="#" alt="Фото">
+        <div class="card__footer">
+          <h2 class="card__text"></h2>
+          <button class="card__like" type="button" aria-label="лайк"></button>
+        </div>
+      </li>
+    </template>
+
+    <!-- script -->
     <script src="./script/index.js"></script>
   </body>
 </html>
