--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="popup popup_type_fullscreen">
         <div class="popup__container-fullscreen">
           <button class="popup__close hover" type="button" aria-label="закрыть всплывающее окно"></button>
-          <img class="popup__full-img" src="#" alt="фото">
+          <img class="popup__full-img" src="#" alt="#">
           <h2 class="popup__full-text"></h2>
         </div>
       </div>
@@ -76,7 +76,7 @@
     <template class="card-template">
       <li class="card__item">
         <button class="card__trash hover" type="button" aria-label="удалить карточку"></button>
-        <img class="card__img" src="#" alt="Фото">
+        <img class="card__img" src="#" alt="#">
         <div class="card__footer">
           <h2 class="card__text"></h2>
           <button class="card__like" type="button" aria-label="лайк"></button>
