--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="popup__container">
           <button class="popup__close hover" type="button" aria-label="закрыть всплывающее окно"></button>
           <h2 class="popup__title">Новое место</h2>
-          <form class="popup__form popup__form_type_photo" method="get" name="profile">
+          <form class="popup__form popup__form_type_photo" method="get" name="photo">
             <input class="popup__input popup__input_type_card-name" type="text" name="cardname" placeholder="Название">
             <input class="popup__input popup__input_type_card-link" type="url" name="cardlink" placeholder="Ссылка на картинку" required>
             <button class="popup__button" type="submit" aria-label="сохранить изминения">Сохранить</button>
