--- a/index.html
+++ b/index.html
@@ -43,9 +43,15 @@
         <div class="popup__container">
           <button class="popup__close popup__close_type_profile hover" type="button" aria-label="закрыть всплывающее окно"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
-          <form class="popup__form popup__form_type_profile" method="get" name="profile">
-            <input class="popup__input popup__input_type_user-name" type="text" name="username" placeholder="Имя" required>
-            <input class="popup__input popup__input_type_about-me" type="text" name="aboutme" placeholder="О себе">
+          <form class="popup__form popup__form_type_profile" method="get" name="profile" novalidate>
+            <label class="popup__input-group">
+              <input class="popup__input popup__input_type_user-name" id="user-name-input" type="text" name="username" placeholder="Имя" minlength="2" maxlength="40" required>
+              <p class="popup__input-error user-name-input-error"></p>
+            </label>
+            <label class="popup__input-group">
+              <input class="popup__input popup__input_type_about-me" id="about-me-input" type="text" name="aboutme" placeholder="О себе" minlength="2" maxlength="200" required>
+              <p class="popup__input-error about-me-input-error"></p>
+            </label>
             <button class="popup__button" type="submit" aria-label="сохранить изминения">Сохранить</button>
           </form>
         </div>
@@ -55,9 +61,15 @@
         <div class="popup__container">
           <button class="popup__close popup__close_type_photo hover" type="button" aria-label="закрыть всплывающее окно"></button>
           <h2 class="popup__title">Новое место</h2>
-          <form class="popup__form popup__form_type_photo" method="get" name="photo">
-            <input class="popup__input popup__input_type_card-name" type="text" name="cardname" placeholder="Название">
-            <input class="popup__input popup__input_type_card-link" type="url" name="cardlink" placeholder="Ссылка на картинку" required>
+          <form class="popup__form popup__form_type_photo" method="get" name="photo" novalidate>
+            <label class="popup__input-group">
+              <input class="popup__input popup__input_type_card-name" id="card-name-input" type="text" name="cardname" placeholder="Название" minlength="2" maxlength="30" required>
+              <p class="popup__input-error card-name-input-error"></p>
+            </label>
+            <label class="popup__input-group">
+              <input class="popup__input popup__input_type_card-link" id="card-link-input" type="url" name="cardlink" placeholder="Ссылка на картинку" required>
+              <p class="popup__input-error card-link-input-error"></p>
+            </label>
             <button class="popup__button" type="submit" aria-label="сохранить изминения">Сохранить</button>
           </form>
         </div>
@@ -85,6 +97,7 @@
     </template>
 
     <!-- script -->
+    <script src="./script/validate.js"></script>
     <script src="./script/index.js"></script>
   </body>
 </html>
