--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <!-- popup profile -->
       <div class="popup popup_type_profile">
         <div class="popup__container">
-          <button class="popup__close popup__close_type_profile hover" type="button" aria-label="закрыть всплывающее окно"></button>
+          <button class="popup__close hover" type="button" aria-label="закрыть всплывающее окно"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <form class="popup__form popup__form_type_profile" method="get" name="profile" novalidate>
             <label class="popup__input-group">
@@ -59,7 +59,7 @@
       <!-- popup photo -->
       <div class="popup popup_type_photo">
         <div class="popup__container">
-          <button class="popup__close popup__close_type_photo hover" type="button" aria-label="закрыть всплывающее окно"></button>
+          <button class="popup__close hover" type="button" aria-label="закрыть всплывающее окно"></button>
           <h2 class="popup__title">Новое место</h2>
           <form class="popup__form popup__form_type_photo" method="get" name="photo" novalidate>
             <label class="popup__input-group">
@@ -77,7 +77,7 @@
       <!-- popup fullscreen -->
       <div class="popup popup_type_fullscreen">
         <div class="popup__container-fullscreen">
-          <button class="popup__close popup__close_type_fullscreen hover" type="button" aria-label="закрыть всплывающее окно"></button>
+          <button class="popup__close hover" type="button" aria-label="закрыть всплывающее окно"></button>
           <img class="popup__full-img" src="#" alt="#">
           <h2 class="popup__full-text"></h2>
         </div>
