--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
     </template>
 
     <!-- script -->
-    <script src="./script/validate.js"></script>
     <script src="./script/index.js"></script>
+    <script src="./script/validate.js"></script>
+    <script src="./script/card.js"></script>
   </body>
 </html>
