--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
     </template>
 
     <!-- script -->
-    <script src="./script/index.js"></script>
-    <script src="./script/validate.js"></script>
-    <script src="./script/card.js"></script>
+    <script type="module" src="./script/data.js"></script>
+    <script type="module" src="./script/index.js"></script>
+    <script type="module" src="./script/FormValidator.js"></script>
+    <script type="module" src="./script/Card.js"></script>
+    <script type="module" src="./script/cardDefault.js"></script>
   </body>
 </html>
