--- a/src/index.html
+++ b/src/index.html
@@ -98,10 +98,12 @@
 
 
     <!-- script -->
-    <script type="module" src="./script/data.js"></script>
-    <script type="module" src="./script/index.js"></script>
-    <script type="module" src="./script/FormValidator.js"></script>
-    <script type="module" src="./script/Card.js"></script>
-    <script type="module" src="./script/cardDefault.js"></script>
+    <script type="module" src="./utils/constants.js"></script>
+    <script type="module" src="./pages/index.js"></script>
+    <script type="module" src="./components/FormValidator.js"></script>
+    <script type="module" src="./components/Card.js"></script>
+    <script type="module" src="./utils/cardDefault.js"></script>
+    <script type="module" src="./components/Popup.js"></script>
+    <script type="module" src="./components/UserInfo.js"></script>
   </body>
 </html>
