--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,13 @@
       <main class="content">
         <!-- profile -->
         <section class="profile">
-          <img class="profile__img" src="<%=require('./images/photo.jpg')%>" alt="Аватарка">
+          <div class="profile__img-wraper">
+            <img class="profile__img" src="#" alt="Аватарка">
+          </div>
           <div class="profile__info">
-            <h1 class="profile__user-name">Жак-Ив Кусто</h1>
+            <h1 class="profile__user-name">...</h1>
             <button class="profile__edit-btn hover" type="button" aria-label="редактировать профиль"></button>
-            <p class="profile__user-about">Исследователь океана</p>
+            <p class="profile__user-about">...</p>
           </div>
           <button class="profile__add-btn hover" type="button" aria-label="добавить новое фото"></button>
         </section>
@@ -81,6 +83,30 @@
           <h2 class="popup__full-text"></h2>
         </div>
       </div>
+      <!-- popup card delete -->
+      <div class="popup popup_type_card-delete">
+        <div class="popup__container">
+          <button class="popup__close hover" type="button" aria-label="закрыть всплывающее окно"></button>
+          <h2 class="popup__title">Вы уверены?</h2>
+          <form class="popup__form popup__form_type_card-delete" method="get" name="card-delete" novalidate>
+            <button class="popup__button" type="submit" aria-label="Подтвердить удаление карточки">Да</button>
+          </form>
+        </div>
+      </div>
+      <!-- update avatar -->
+      <div class="popup popup_type_update-avatar">
+        <div class="popup__container">
+          <button class="popup__close hover" type="button" aria-label="закрыть всплывающее окно"></button>
+          <h2 class="popup__title">Обновить аватар</h2>
+          <form class="popup__form popup__form_type_update-avatar" method="get" name="update-avatar" novalidate>
+            <label class="popup__input-group">
+              <input class="popup__input popup__input_type_avatar" id="avatar-input" type="url" name="avatar" placeholder="Ссылка на картинку" required>
+              <p class="popup__input-error avatar-input-error"></p>
+            </label>
+            <button class="popup__button" type="submit" aria-label="сохранить изминения">Сохранить</button>
+          </form>
+        </div>
+      </div>
     </div>
 
     <!-- template -->
@@ -90,7 +116,10 @@
         <img class="card__img" src="#" alt="#">
         <div class="card__footer">
           <h2 class="card__text"></h2>
-          <button class="card__like" type="button" aria-label="лайк"></button>
+          <div class="card__like-wraper">
+            <button class="card__like" type="button" aria-label="лайк"></button>
+            <span class="card__counter"></span>
+          </div>
         </div>
       </li>
     </template>
